package/manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-app
  namespace: frontend  # Deploy the workload in a separate namespace
  labels:
    app: car-app
    env: production  # Added missing 'env' label
spec:
  replicas: 3
  selector:
    matchLabels:
      app: car-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: car-app
        env: production  # Added missing 'env' label inside template
    spec:
      containers:
        - name: car-app
          image: us-central1-docker.pkg.dev/kodiak-448212/kodiak/kodi:v1.42
          ports:
            - containerPort: 3000
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          readinessProbe:
            httpGet:
              path:  /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
