package/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-app-service
  namespace: frontend
spec:
  selector:
    app: car-app  # Matches the labels on the pods created by the Deployment
  ports:
    - protocol: TCP
      port: 80       # The port exposed by the Service
      targetPort: 3000  # The container port in the pod
  type: LoadBalancer  # Default type for internal communication
